--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "maej3rked-tools",
   "author": "maejok-xx/f3rked",
-  "version": "2.21.2",
+  "version": "2.22.0",
   "description": "Add-on Tools for Fishtank.live Season 3",
   "main": "main.js",
   "scripts": {
@@ -44,6 +44,10 @@
     {
       "name": "deerfarce",
       "url": "https://github.com/deerfarce"
+    },
+    {
+      "name": "tootster",
+      "url": "https://github.com/tootster"
     }
   ],
   "devDependencies": {
