--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ pnpm-lock.yaml
 maejok-tools.code-workspace
 dist/maejok-tools.dev.user.js
 dist/maejok-tools.preview.user.js
+
+package.json
+package-lock.json
