--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
 pnpm-lock.yaml
 
-maejok-tools.code-workspace
-dist/maejok-tools.dev.user.js
-dist/maejok-tools.preview.user.js
+maej3rked-tools.code-workspace
+dist/maej3rked-tools.dev.user.js
+dist/maej3rked-tools.preview.user.js
